{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 1012,
  "lineage": "4fe9495a-9497-75d7-4fdb-62aaa9ee0a10",
  "resources": [
    {
      "mode": "data",
      "type": "aws_lb",
      "name": "ghost_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:429881705512:loadbalancer/app/epam-lb/3dcacbd610a0dffc",
            "arn_suffix": "app/epam-lb/3dcacbd610a0dffc",
            "desync_mitigation_mode": "defensive",
            "dns_name": "epam-lb-1695655880.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:429881705512:loadbalancer/app/epam-lb/3dcacbd610a0dffc",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "epam-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a33076721593ee68"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a0638ce87ceace67"
              },
              {
                "subnet_id": "subnet-0b6fd49a6af48e3a2"
              },
              {
                "subnet_id": "subnet-0caac09c138593f59"
              }
            ],
            "subnets": [
              "subnet-0a0638ce87ceace67",
              "subnet-0b6fd49a6af48e3a2",
              "subnet-0caac09c138593f59"
            ],
            "tags": {
              "ENV": "dev"
            },
            "vpc_id": "vpc-0d1d073e3a7ca1f62",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03eb6185d756497f8",
            "arn": "arn:aws:ec2:us-east-1:429881705512:instance/i-0962924416e2b1b16",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0962924416e2b1b16",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ghost-ec2-pool",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fc222ac45b3c8400",
            "private_dns": "ip-10-10-1-59.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.59",
            "public_dns": "ec2-3-81-77-44.compute-1.amazonaws.com",
            "public_ip": "3.81.77.44",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ae0baa251b903cf9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-03346e4cbf8c7e12f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a0638ce87ceace67",
            "tags": {
              "Name": "Bastion"
            },
            "tags_all": {
              "Name": "Bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03346e4cbf8c7e12f"
            ]
          },
          "dependencies": [
            "aws_key_pair.ghost-ec2-pool",
            "aws_security_group.bastion",
            "aws_subnet.public_a",
            "data.aws_ami.ecs_optimized_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "cloudx-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:429881705512:internet-gateway/igw-03a856e79a80b42b1",
            "id": "igw-03a856e79a80b42b1",
            "owner_id": "429881705512",
            "tags": {
              "Name": "cloudx-igw"
            },
            "tags_all": {
              "Name": "cloudx-igw"
            },
            "vpc_id": "vpc-0d1d073e3a7ca1f62"
          },
          "dependencies": [
            "aws_vpc.cloudx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "epam-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:429881705512:loadbalancer/app/epam-lb/3dcacbd610a0dffc",
            "arn_suffix": "app/epam-lb/3dcacbd610a0dffc",
            "desync_mitigation_mode": "defensive",
            "dns_name": "epam-lb-1695655880.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:429881705512:loadbalancer/app/epam-lb/3dcacbd610a0dffc",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "epam-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a33076721593ee68"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a0638ce87ceace67"
              },
              {
                "subnet_id": "subnet-0b6fd49a6af48e3a2"
              },
              {
                "subnet_id": "subnet-0caac09c138593f59"
              }
            ],
            "subnets": [
              "subnet-0a0638ce87ceace67",
              "subnet-0b6fd49a6af48e3a2",
              "subnet-0caac09c138593f59"
            ],
            "tags": {
              "ENV": "dev"
            },
            "tags_all": {
              "ENV": "dev"
            },
            "vpc_id": "vpc-0d1d073e3a7ca1f62",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.bastion",
            "aws_security_group.ec2_pool",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_subnet.public_c",
            "aws_vpc.cloudx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:429881705512:listener/app/epam-lb/3dcacbd610a0dffc/bcd224a3a6aa97cb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:429881705512:targetgroup/ec2-pool/53a97c2fad0df2b1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:429881705512:listener/app/epam-lb/3dcacbd610a0dffc/bcd224a3a6aa97cb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:429881705512:loadbalancer/app/epam-lb/3dcacbd610a0dffc",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.epam-lb",
            "aws_lb_target_group.ec2_target",
            "aws_security_group.alb",
            "aws_security_group.bastion",
            "aws_security_group.ec2_pool",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_subnet.public_c",
            "aws_vpc.cloudx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ec2_target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:429881705512:targetgroup/ec2-pool/53a97c2fad0df2b1",
            "arn_suffix": "targetgroup/ec2-pool/53a97c2fad0df2b1",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 7,
                "matcher": "200",
                "path": "/ghost/api/admin/site/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:429881705512:targetgroup/ec2-pool/53a97c2fad0df2b1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ec2-pool",
            "port": 2368,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d1d073e3a7ca1f62"
          },
          "dependencies": [
            "aws_vpc.cloudx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:429881705512:targetgroup/ec2-pool/53a97c2fad0df2b1-20231017130037549000000003",
            "port": 2368,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:429881705512:targetgroup/ec2-pool/53a97c2fad0df2b1",
            "target_id": "i-01e3449148e7c8a74"
          },
          "dependencies": [
            "aws_lb_target_group.ec2_target",
            "data.aws_instances.ec2-pool"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:429881705512:targetgroup/ec2-pool/53a97c2fad0df2b1-20231017130037500200000002",
            "port": 2368,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:429881705512:targetgroup/ec2-pool/53a97c2fad0df2b1",
            "target_id": "i-0983103c40fdc4073"
          },
          "dependencies": [
            "aws_lb_target_group.ec2_target",
            "data.aws_instances.ec2-pool"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:429881705512:route-table/rtb-058be35bd507a0f49",
            "id": "rtb-058be35bd507a0f49",
            "owner_id": "429881705512",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03a856e79a80b42b1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_rt"
            },
            "tags_all": {
              "Name": "public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d1d073e3a7ca1f62"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.cloudx-igw",
            "aws_vpc.cloudx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075b27b99f1b68f5d",
            "route_table_id": "rtb-058be35bd507a0f49",
            "subnet_id": "subnet-0a0638ce87ceace67"
          },
          "dependencies": [
            "aws_internet_gateway.cloudx-igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_a",
            "aws_vpc.cloudx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0574ee54f3592977d",
            "route_table_id": "rtb-058be35bd507a0f49",
            "subnet_id": "subnet-0caac09c138593f59"
          },
          "dependencies": [
            "aws_internet_gateway.cloudx-igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_b",
            "aws_vpc.cloudx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-039402a41ce71f418",
            "route_table_id": "rtb-058be35bd507a0f49",
            "subnet_id": "subnet-0b6fd49a6af48e3a2"
          },
          "dependencies": [
            "aws_internet_gateway.cloudx-igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_c",
            "aws_vpc.cloudx"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-039402a41ce71f418",
            "route_table_id": "rtb-058be35bd507a0f49",
            "subnet_id": "subnet-0b6fd49a6af48e3a2"
          },
          "dependencies": [
            "aws_internet_gateway.cloudx-igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_c",
            "aws_vpc.cloudx"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-039402a41ce71f418",
            "route_table_id": "rtb-058be35bd507a0f49",
            "subnet_id": "subnet-0b6fd49a6af48e3a2"
          },
          "dependencies": [
            "aws_internet_gateway.cloudx-igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_c",
            "aws_vpc.cloudx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:429881705512:security-group/sg-0a33076721593ee68",
            "description": "allows access to alb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-00ccd56d403efa705"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a33076721593ee68",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20231017115518390200000005",
            "name_prefix": "terraform-",
            "owner_id": "429881705512",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb"
            },
            "tags_all": {
              "Name": "alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d1d073e3a7ca1f62"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.ec2_pool",
            "aws_vpc.cloudx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:429881705512:security-group/sg-03346e4cbf8c7e12f",
            "description": "allows access to bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03346e4cbf8c7e12f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from outside",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20231017115509940400000002",
            "name_prefix": "terraform-",
            "owner_id": "429881705512",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Bastion"
            },
            "tags_all": {
              "Name": "Bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d1d073e3a7ca1f62"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cloudx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:429881705512:security-group/sg-00ccd56d403efa705",
            "description": "allows access to ec2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00ccd56d403efa705",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "SSH from bastion sg",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "traffic from ALB",
                "from_port": 2368,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2368
              },
              {
                "cidr_blocks": [],
                "description": "SSH from bastion sg",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03346e4cbf8c7e12f"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20231017115514600100000003",
            "name_prefix": "terraform-",
            "owner_id": "429881705512",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EC2_pool"
            },
            "tags_all": {
              "Name": "EC2_pool"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d1d073e3a7ca1f62"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion",
            "aws_vpc.cloudx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:429881705512:security-group/sg-00ddca2e93b27a554",
            "description": "defines access to efs mount points",
            "egress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00ddca2e93b27a554",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "EFS",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00ccd56d403efa705"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "efs",
            "name_prefix": "",
            "owner_id": "429881705512",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EFS"
            },
            "tags_all": {
              "Name": "EFS"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d1d073e3a7ca1f62"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.ec2_pool",
            "aws_vpc.cloudx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:429881705512:subnet/subnet-0a0638ce87ceace67",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0638ce87ceace67",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "429881705512",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_a"
            },
            "tags_all": {
              "Name": "public_a"
            },
            "vpc_id": "vpc-0d1d073e3a7ca1f62"
          },
          "dependencies": [
            "aws_vpc.cloudx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:429881705512:subnet/subnet-0caac09c138593f59",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0caac09c138593f59",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "429881705512",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_b"
            },
            "tags_all": {
              "Name": "public_b"
            },
            "vpc_id": "vpc-0d1d073e3a7ca1f62"
          },
          "dependencies": [
            "aws_vpc.cloudx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:429881705512:subnet/subnet-0b6fd49a6af48e3a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b6fd49a6af48e3a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "429881705512",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_c"
            },
            "tags_all": {
              "Name": "public_c"
            },
            "vpc_id": "vpc-0d1d073e3a7ca1f62"
          },
          "dependencies": [
            "aws_vpc.cloudx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cloudx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:429881705512:vpc/vpc-0d1d073e3a7ca1f62",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0ddf32a160c0fcba1",
            "default_route_table_id": "rtb-0e85db3933722a550",
            "default_security_group_id": "sg-0f73982f5e7727037",
            "dhcp_options_id": "dopt-0ce8602f9dcf17c74",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d1d073e3a7ca1f62",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e85db3933722a550",
            "owner_id": "429881705512",
            "tags": {
              "Name": "cloudx"
            },
            "tags_all": {
              "Name": "cloudx"
            }
          }
        }
      ]
    }
  ]
}